# menu-v2

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  build.sh  env.json  openapi.yaml  pyproject.toml  samconfig.toml  template.yaml
events/: create_recipe.json  delete_recipe.json  get_recipe.json  hello.json  list_recipes.json  update_recipe.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/config/: aws-exports.ts
internal/controllers/: recipes.py
src/repository/: dynamodb.py
